<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">module_ires</string>
    <string name="default_app_font_path"/>
    <string name="top_cookie">Top Cookie</string>
    <string name="custom_animations">Custom Animations</string>
    <string name="bottom_cookie">Bottom Cookie</string>
    <string name="fancy_bottom_cookie">Fancy Bottom Cookie</string>
    <string name="custom_view_cookie">Custom View Cookie</string>
    <string name="custom_message">Custom message</string>
    <string name="custom_title">Custom Title</string>

    <!--CookieBar-->
    <string name="cookie_title">E·享：努力做更好的解决方案</string>
    <string name="cookie_message">工具类！自定义控件！更好的解决场景！优美的界面交互！更多的使用功能！</string>
    <string name="cookie_action">点击一下</string>
    <string name="custom_anim_cookie_title">E·享：This cookie has custom in/out animations</string>
    <string name="custom_anim_cookie_message">Did you notice it entered from the left?\nCan you guess how it will leave the screen?\nIf you guessed from the right, you\'re right!</string>
    <string name="custom_click_result">操作成功</string>
    <string name="action">Action</string>
    <string name="signup_agreeTerms">我同意<a href="http://www.baidu.com/">用户协议</a>中的所有内容</string>
    <string name="str_agreeTerms">本板块内容参考自项目<a href="https://github.com/xuexiangjys/XUI/">XUI</a>中的部分内容，对此表示感谢</string>
    <string name="str_agreeTerms2">如有问题请<a href="https://github.com/maiduoduo/EJoy/issues/">联系我</a>调整</string>
    <string name="str_blur_blog"> <a href="https://www.jianshu.com/p/46ef85bcb433/">详细请参考博客</a> </string>

    <!--bottomsheet-->
    <string name="share">分享</string>
    <string name="upload">上传</string>
    <string name="copy">复制</string>
    <string name="print">粘贴</string>
    <string name="call">电话</string>
    <string name="help">帮助</string>
    <string name="bottomsheet">BottomSheet 示例</string>

    <string name="introduce">Eshare工具库，加入主流工具，自定义、好的解决方案等。\n\n目前该库处于功能开发阶段，后期会将功能发布到Jfrog bintray,形成远程引用仓库\n\n
E·享 目的在于整理与集纳好的优秀方案和功能实现，有自定义功能，也有来源于网络的好的视图功能，如有侵权，请联系删除 \n\n
后期会加入组件化管理，便于更好演示。 \n\n
有好的建议或者指正的地方，请您不吝赐教，提请issue,谢谢。\n\n
烦请看到的各位，共同维护创作者的知识产权，不必大肆滥用别人的成果，共建一个良好生态的技术环境，在此感谢。\n\n</string>
    <string name="author_name">关于作者</string>
    <string name="author_info">\@maiduoduo\n软件工程师，从业数年，在开发上有一些自我心得，希望在自己多涉猎，多积累的过程中能够增长一些经验，也同时希望与其他技术人一起成长，互相帮助。\n\n思想\n方便于每一项设计，建设于每一个方案\n\n本项目Github地址：</string>
    <string name="author_info2">本项目由\@maiduoduo进行开发，技术组件及思想融入了网络贡献开源和自己结合自我想法经验实践汇总</string>
    <string name="author_info3">本项目完全开源，如果你觉得不错，可以帮忙分享给你更多的朋友，这是我最大的动力和支持，非常感谢！\n\n</string>
    <string name="link_github">https://github.com/maiduoduo/EJoy</string>
    <string name="link_enjoylife">https://github.com/maiduoduo/EJoy</string>
    <string name="opensource_framework">开源框架</string>

    <string name="edate_year">年</string>
    <string name="edate_month">月</string>
    <string name="edate_day">日</string>
    <string name="edate_hour">时</string>
    <string name="edate_min">分</string>
    <string name="edate_title">选择时间</string>
    <string name="edate_sure">确定</string>
    <string name="edate_cancel">取消</string>
    <string name="edate_title_default">设置</string>

    <!-- 点赞选中 -->
    <string name="icon_like_fill">&#xe60d;</string>
    <!--评论-->
    <string name="icon_comment">&#xe621;</string>
    <!-- 微博 -->
    <string name="icon_weibo">&#xe620;</string>
    <!-- 微信 -->
    <string name="icon_wechat">&#xe61d;</string>
    <!-- 微信朋友圈 -->
    <string name="icon_friends">&#xe61c;</string>
    <!-- QQ -->
    <string name="icon_qq">&#xe61e;</string>
    <!-- QQ空间 -->
    <string name="icon_qq_space">&#xe61f;</string>
    <!-- 更多 -->
    <string name="icon_more">&#xe61b;</string>
    <!-- 地理位置 -->
    <string name="icon_location_fill">&#xe624;</string>

    <string name="trans">trans</string>

    <string name="view_pager_bottom_sheet_behavior" translatable="false" tools:ignore="ExtraTranslation">
        com.goobird.common.application.widget.bottomsheetdialog.viewpagerofbottomsheet.ViewPagerBottomSheetBehavior</string>


    <!--股票-基金图表-->
    <string name="stock_date">日期：</string>
    <string name="stock_open">开：</string>
    <string name="stock_hign">高：</string>
    <string name="stock_low">低：</string>
    <string name="stock_close">收：</string>
    <string name="stock_diff">涨跌额：</string>
    <string name="stock_chg">涨跌幅：</string>


    <!--自定义安全键盘-->
    <string name="safe_keyboard_system">系统键盘</string>
    <string name="safe_keyboard_new">"安全软键盘"</string>
    <string name="safe_keyboard_new2">安全软键盘(数字)</string>
    <string name="safe_keyboard_new3">安全软键盘(IdCard)</string>
    <string name="safe_keyboard_mLabelTextSize">mLabelTextSize</string>
    <string name="safe_keyboard_scrollview_edit_test">滚动输入安全键盘</string>
    <string name="safe_keyboard_alert_dialog_test">AlertDialog</string>
    <string name="safe_keyboard_use_safe_alert">AlertDialog使用SafeKeyboard</string>
    <string name="safe_keyboard_alert_test" tools:ignore="ExtraTranslation">Dialog安全键盘</string>
    <string name="safe_keyboard_popup_test">PopupWindow安全键盘</string>
    <string name="safe_keyboard_use_safe_pop">PopupWindow使用SafeKeyboard</string>
    <string name="safe_keyboard_error_param_null_inflater">错误的参数, LayoutInflater 为 null</string>
    <string name="safe_keyboard_confirm">确认</string>
    <string name="safe_keyboard_cancel">取消</string>

    <string name="safe_keyboard">智能加密安全软键盘</string>
    <string name="safe_keyboard_key1">"&#64;"</string>
    <string name="safe_keyboard_key2">"&#38;"</string>
    <string name="safe_keyboard_key3">\"</string>
    <string name="safe_keyboard_key4">"&#60;"</string>
    <string name="safe_keyboard_key5">"&#62;"</string>
    <string name="description">安全软键盘</string>

    <string name="str_toast_tip_sample">此时入局，小米胜算几何？
\n在关注完自身问题后，小米无法回避未来十年将在智能汽车领域面临的丛林法则。抛开传统汽车企业暂且不谈，在小米决定造车之前，蔚来和小鹏汽车均成立于2014年，理想汽车成立于2015年。作为行业中的领先者，特斯拉的创立则要追溯到2003年，而它的第一款纯电动汽车发布于2012年。

        从时间轴上看，当蔚来、小鹏汽车、理想汽车纷纷投入时代的浪潮时，小米正在智能手机业务的低谷鏖战。而特斯拉成立之时，这个世界甚至还没有听说过小米手机的故事。根据这些公司的过往经历，成立三到五年（蔚来ES8用了3年，小鹏G3超过4年，特斯拉Roadster则是5年）是第一台车量产交付的时间节点。
在获得该能力后，大多数智能汽车品牌保持在每一到两年推出一款新车型的更新频率，而一年一款似乎是更合理的目标——这与小米每年更新旗舰机的速度一致。

        这是摆在小米面前的客观时间差。在发布会现场，雷军表示也曾反问自己：别人做了五六年，小米现在才做，晚不晚？雷军没有给出一个明确答案，但他认为小米比十年前强大了太多，现在害怕的是没有十年前的勇气、决心、体力和投入。这也是他反复纠结和思考的关键点。</string>


</resources>
