<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/share" android:icon="@mipmap/icon_logo_weibo" android:title="@string/share"/>
    <item android:id="@+id/upload" android:icon="@mipmap/icon_logo_qq" android:title="@string/upload"/>
    <item android:id="@+id/call" android:icon="@mipmap/icon_logo_alipay" android:title="@string/call"/>
    <item android:id="@+id/call2" android:icon="@mipmap/icon_logo_wechat" android:title="微信"/>
    <item android:id="@+id/call3" android:icon="@mipmap/icon_logo_qzone" android:title="QZONE"/>
    <item android:id="@+id/call4" android:icon="@mipmap/icon_logo_weibo" android:title="微博私信"/>
    <group android:id="@android:id/empty" android:visible="false">
        <item android:id="@+id/help" android:icon="@mipmap/icon_logo_wechat" android:title="@string/help"/>
    </group>
</menu>