<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/share" android:title="@string/share" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@+id/upload" android:title="@string/upload" android:icon="@mipmap/ico_grid_j"/>
    <group android:id="@android:id/empty">
    <item android:id="@+id/call" android:title="@string/call" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@+id/help" android:title="@string/help" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@+id/print" android:title="@string/share" android:icon="@mipmap/ico_grid_j"/>
    </group>
    <item android:id="@id/print" android:title="@string/print" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/upload" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/share" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/help" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/print" android:icon="@mipmap/ico_grid_j"/>
    <group android:id="@android:id/background">
    <item android:id="@id/print" android:title="@string/print" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/help" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/print" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/upload" android:icon="@mipmap/ico_grid_j"/>
    </group>
    <item android:id="@id/print" android:title="@string/call" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/print" android:icon="@mipmap/ico_grid_j"/>
    <item android:id="@id/print" android:title="@string/call" android:icon="@mipmap/ico_grid_j"/>

</menu>