<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cookiebarParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:background="@color/LGray3"
    tools:layout_editor_absoluteY="81dp">

    <FrameLayout
        android:id="@+id/topheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="@dimen/dp_10"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/cookie_monster"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_app_launcher" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_marginTop="@dimen/dp_2"
                        android:src="@mipmap/img_icookiebar_title"/>
                    <TextView
                        android:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray4"
                        android:layout_marginTop="@dimen/dp_2"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:textSize="@dimen/sp_12"
                        android:text="顶部和底部信息显示条" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/LGray3"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/btnCBTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingHorizontal="@dimen/dp_10"
                android:paddingTop="@dimen/dp_50"
                android:paddingBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_40"
                android:textColor="@color/black_55"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold"
                android:text="@string/top_cookie" />
        </FrameLayout>

    </FrameLayout>
    <TextView
        android:id="@+id/btnCBBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black_55"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        android:text="@string/bottom_cookie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topheader"/>
    <TextView
        android:id="@+id/btnCBAnim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black_55"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        android:text="@string/custom_animations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCBBottom"/>
    <TextView
        android:id="@+id/btnCBBottomAnimated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black_55"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        android:text="@string/fancy_bottom_cookie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCBAnim"/>
    <TextView
        android:id="@+id/btnCBCustomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="10dp"
        android:textColor="@color/black_55"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"
        android:text="@string/custom_view_cookie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCBBottomAnimated"/>
</android.support.constraint.ConstraintLayout>
