<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flSafeKBRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="70dp" />
            <ImageView
                android:id="@+id/ibannerView"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@mipmap/banner_keyboard"
                android:scaleType="centerCrop"
                android:layout_marginBottom="@dimen/dp_15"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent"/>


            <EditText
                android:id="@+id/normalEditText"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_system"
                android:inputType="text" />

            <EditText
                android:id="@+id/safeEditText"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_new"
                android:inputType="textVisiblePassword" />

            <EditText
                android:id="@+id/safeEditText2"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_new2"
                android:inputType="number" />

            <EditText
                android:id="@+id/safeEditText3"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_new3" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/safeAppCompactEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="AppCompatEditText" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:onClick="onAlertDialogClick"
                android:text="@string/safe_keyboard_alert_test" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:onClick="onPopupWindowTestClick"
                android:text="@string/safe_keyboard_popup_test" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:onClick="onScrollEditTestClick"
                android:text="@string/safe_keyboard_scrollview_edit_test" />

            <EditText
                android:id="@+id/safeEditText4"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_new"
                android:inputType="number" />

            <EditText
                android:id="@+id/safeEditText5"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_new" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_system" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_system" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_system" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:hint="@string/safe_keyboard_system" />







            <Space
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_below="@+id/dfbv_content" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <RelativeLayout
        android:id="@+id/box_table"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:clickable="true">

        <com.kongzue.dialog.util.BlurView
            android:id="@+id/blur"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSpace"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20" />

            <LinearLayout
                android:id="@+id/box_table_child"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvSpace"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">

                <LinearLayout
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingRight="10dp">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:src="@mipmap/img_back_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:gravity="center"
                        android:text="返回"
                        android:textColor="#2d6cee"
                        android:textSize="16dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/split_light" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="2"
                android:text="自定义混合键盘"
                android:textColor="#dc000000"
                android:textSize="14dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/keyboardPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical" />

</FrameLayout>
